projet terminer, regler probleme de log4j2 avant de merge